2008-01-06  Sven Neumann  <sven@gimp.org>

	* configure.in: compile a list of MIME types that GIMP can read.

	* desktop/gimp.desktop.in.in: use the list of MIME types as
	compiled by the configure script. Fixes bug #507318.

	* desktop/Makefile.am
	* desktop/gimp.applications.in
	* desktop/gimp.keys.in: removed; the gimp.applications and
	gimp.keys files are obsolete.

	* plug-ins/psd/psd.c (MAIN): corrected MIME type in unused code.

2008-01-06  Sven Neumann  <sven@gimp.org>

	* configure.in: applied patch from Matt Smith that adds a
	--without-hal configure option (bug #507595).
	
	* INSTALL: document the new option.

2008-01-06  Sven Neumann  <sven@gimp.org>

	* configure.in
	* plug-ins/Makefile.am: fixed --without-jpeg configure option
	(bug #507572).

2008-01-06  Michael Natterer  <mitch@gimp.org>

	* app/gegl/gimpoperationtilesource.c
	* app/gegl/gimpoperationtilesink.c: formatting.

2008-01-06  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpchecks.c
	* libgimp/gimpunitcache.c
	* libgimpwidgets/gimppageselector.c
	* libgimpwidgets/gimpcolorscales.c: removed redundant checks for
	enum values (which are unsigned) >= 0.

2008-01-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/convmatrix.c (convolve_image): fixed out-of-bounds
	array access.

2008-01-06  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpmemsizeentry.c: use G_GUINT64_CONSTANT()
	instead of a cast.

2008-01-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/tile.c (tile): update the progress less often.

2008-01-05  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-image.c: new Image.new_layer() method,
	which is convenience for creating, filling, and attaching a new
	layer onto an image. Based on a idea and patch by João S. O. Bueno
	in bug #505982.

2008-01-05  Manish Singh  <yosh@gimp.org>

	* app/core/gimpimagemap.c: hardcode a declaration of
	gegl_node_add_child() in here for now.

2008-01-05  Øyvind Kolås  <pippin@gimp.org>

	* app/gegl/gegl/gegl-operation-sink.h: